# adventure-br

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  autogen.sh  configure.ac
.github/workflows/: build.yml  coverity.yml  release.yml
cmake/: Translations.cmake  config.h.in
debian/: control  rules
po/: adventure.pot  en_US.po  pt_BR.po
src/: Makefile.am  advent.c  advent.h  advword.h  database.c  english.c  i18n.h  parser.c  parser.h  proto.h  synonyms_pt.inc
tests/: CMakeLists.txt  parser_commands.c
tools/: build_pt_synonyms.py  pt_synonyms_data.py
